--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,7 @@
 * {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.hide {
+    display: none;
+}
