added readme, finished CSS and JS with local storage working and the quiz working

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,16 @@
 .hide {
     display: none;
 }
+
+body {
+    background-color: var(--Dark);
+    text-align: center
+
+}
+    button {
+        background-color: var(--lightpink);
+        color: #474747;
+        border-radius: 25px;
+        text-align: center;
+    }
+    
